GNOME Bugzilla – Bug 786619
egl: Don't require eglGetPlatformDisplayEXT, let it fail if not present
Last modified: 2017-08-22 16:36:44 UTC
When building mutter 3.24 and trying to run it on Endless (which uses X11), I found the following runtime error that prevented the shell from running: Window manager error: Failed to get proc address for 'eglGetPlatformDisplayEXT' While debugging, I found the error was happening due to GET_EGL_PROC_ADDR_REQUIRED (eglGetPlatformDisplayEXT) [1], which is called while initializing the backend. Talking to Jonas on IRC he mentioned that this should only be required on Wayland, so we probably can simply remove the _REQUIRED part (and the unused macro) and let the call to eglGetPlatformDisplay() error accordingly. [1] https://github.com/GNOME/mutter/blob/master/src/backends/meta-egl.c#L777
Created attachment 358167 [details] [review] egl: Don't require eglGetPlatformDisplayEXT, let it fail if not present
Review of attachment 358167 [details] [review]: lgtm. the commit message subject could loose everything after the comma; as we now do *not* fail if not present. The commit message body sufficiently describes the expected result however.
Thanks Jonas. Fixed in master now with the amended commit message: https://git.gnome.org/browse/mutter/commit/?id=e07524280199f3befee4f28729daf64b65b119e6